--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,6 @@
   /* justify-content: center; */
   align-items: center;
   width: 100%;
-  background-color: #eef9fd;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,15 +33,6 @@
   align-items: center;
   width: 100%;
   padding: 0 0.5rem;
-}
-
-.top_guidance {
-  font-weight: bold;
-  padding: 1rem;
-  display: flex;
-  width: 100%;
-  color: #0097CF;
-  justify-content: space-between;
 }
 
 .footer {
@@ -78,6 +68,16 @@
   font-size: 4rem;
 }
 
+.title,
+.description {
+  text-align: center;
+}
+
+.description {
+  line-height: 1.5;
+  font-size: 1.5rem;
+}
+
 .quiz_title {
   margin: 0;
   margin-bottom: 2rem;
@@ -95,34 +95,14 @@
   text-align: center;
 }
 
-.quiz_title_card {
-  padding: 8rem 15% 2rem 15%;
-  margin: 0;
-  line-height: 1.15;
-  font-size: var(--m);
-  letter-spacing: 0.05em;
-  /* padding: 0 15%; */
-  text-align: center;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
+/* .code {
   background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
-}
+} */
 
 .grid {
   display: grid;
@@ -134,17 +114,6 @@
   justify-items: center;
 }
 
-.campusGrid {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  gap: 1rem;
-  margin-top: 3rem;
-}
-
 .grid_start {
   display: grid;
   width: 100%;
@@ -152,65 +121,6 @@
   gap: 2rem;
   /* margin-top: 1rem; */
   justify-items: center;
-}
-
-.quiz_wrapper {
-  width: 50.5rem;
-  /* height: 24rem; */
-  margin: 2rem 0 5rem 0;
-  padding: 2rem;
-  background-color: white;
-  border-radius: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.result_percentage {
-  border-radius: 100%;
-  height: 141px;
-  width: 141px;
-  font-size: 45px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.circleBackground {
-  fill: none;
-  stroke: #dde9f8;
-}
-
-.circleProgress {
-  fill: none;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-}
-
-.spinner {
-  border: 2px solid #f8fcff;
-  border-top: 2px solid #C8DBFC;
-  border-radius: 50%;
-  width: 29px;
-  height: 29px;
-  animation: spin 1s linear infinite;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 .quiz_grid {
@@ -244,30 +154,7 @@
 .quiz_card_top_wrapper {
   display: flex;
   gap: 0.5rem;
-  justify-content: space-between;
   width: 100%;
-}
-
-.timer {
-  background-color: #0191c8;
-  padding: 0 8px;
-  border-radius: 20px;
-  text-wrap: nowrap;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.progress {
-  background: #A4FFBD;
-  color: #25BF6C;
-  padding: 5px 8px;
-  border-radius: 20px;
-  text-wrap: nowrap;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .quiz_card_title {
@@ -297,80 +184,15 @@
   overflow-wrap: break-word;
 }
 
-.start,
-.continueBtn {
-  margin: 1rem;
-  /* padding: 1.5rem; */
-  padding: 0 2rem;
-  text-align: left;
-  color: white;
-  text-decoration: none;
-  background: #039ad1;
-  border: 1px solid #eaeaea;
-  border-radius: 5px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  text-align: center;
-  cursor: pointer;
-  /* min-width: 190px; */
-  /* width: 45%; */
-}
-
-/* .start, .continueBtn {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  background: #ffffff;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  text-align: center;
-  cursor: pointer;
-  min-width: 190px; */
-/* width: 45%; */
-/* } */
-
-.continueBtn {
-  font-size: 20px;
-}
-
 .quiz_card_option:hover,
 .card:hover,
 .campusCard:hover,
 /* .quiz_card_option:focus, .start:focus, .card:focus, */
 .quiz_card_option:active,
-.start:active,
 .card:active,
 .campusCard:active {
   color: #0070f3;
   border-color: #0070f3;
-}
-
-.start:hover {
-  color: #ffffff;
-  border-color: #84b1e4;
-}
-
-.quiz_timer {
-  position: absolute;
-  top: 20px;
-  right: 80px;
-  font-size: 18px;
-}
-
-.currentQuestion {
-  position: absolute;
-  top: 20px;
-  left: 80px;
-  font-size: 18px;
-}
-
-.backToHome {
-  position: absolute;
-  top: 50px;
-  left: 80px;
-  font-size: 25px;
 }
 
 .card h2 {
@@ -382,11 +204,6 @@
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
 }
 
 .buttonTextSelector {
@@ -434,9 +251,39 @@
   position: relative;
 }
 
-@media (max-width: 811px) {
-  .quiz_wrapper {
-    width: 45rem;
+/* CSS DEDICATED TO SPINNER */
+.circleBackground {
+  fill: none;
+  stroke: #dde9f8;
+}
+
+.circleProgress {
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+.spinner {
+  border: 2px solid #f8fcff;
+  border-top: 2px solid #C8DBFC;
+  border-radius: 50%;
+  width: 29px;
+  height: 29px;
+  animation: spin 1s linear infinite;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
 
@@ -463,22 +310,6 @@
     height: auto;
   }
 
-  .quiz_title_card {
-    padding: 7rem 16px 2rem 16px;
-  }
-
-  .quiz_timer {
-    right: 10px !important;
-  }
-
-  .currentQuestion {
-    left: 10px !important;
-  }
-
-  .backToHome {
-    left: 10px !important;
-  }
-
   .quiz_grid {
     padding: 0 4%;
     gap: 1rem;
@@ -489,26 +320,9 @@
     padding: 0.9rem;
     height: auto;
   }
-
-  .quiz_wrapper {
-    width: 90%;
-  }
 }
 
 @media (max-width: 600px) {
-  .quiz_timer {
-    top: 0;
-  }
-
-  .currentQuestion {
-    top: 0;
-  }
-
-  .quiz_title_card {
-    /* font-size: 1.9rem; */
-    padding: 5rem 16px 1rem 16px;
-  }
-
   .grid {
     width: 100%;
     flex-direction: column;
@@ -525,26 +339,12 @@
     flex-direction: column;
   }
 
-  .quiz_wrapper {
-    padding: 0.5rem;
-  }
-
   .buttonTextSelector {
     font-size: 16px;
   }
 
   .quiz_description {
     padding: 0;
-  }
-
-  .timer {
-    max-width: 200px;
-    margin: 0 auto;
-  }
-
-  .progress {
-    max-width: 200px;
-    margin: 0 auto;
   }
 
 }
