--- a/styles/defaultTheme.css
+++ b/styles/defaultTheme.css
@@ -7,12 +7,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 .quiz_button {
     margin: 1rem;
     text-align: left;
     color: white;
+    background-color: #0097ce;
     text-decoration: none;
     border: 1px solid #eaeaea;
     border-radius: 5px;
@@ -56,6 +58,38 @@
     justify-content: center;
 }
 
+.buttonTextSelector {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.quiz_card_option,
+.campusCard {
+    padding: 1rem;
+    text-align: left;
+    color: #0097CF;
+    height: -webkit-fill-available;
+    background: #fff;
+    text-decoration: none;
+    border: 1px solid #eaeaea;
+    border-radius: 10px;
+    transition: color 0.15s ease, border-color 0.15s ease;
+    width: auto;
+    width: 100%;
+    cursor: pointer;
+}
+
+.quiz_card_option:hover,
+.card:hover,
+.campusCard:hover,
+.quiz_card_option:active,
+.card:active,
+.campusCard:active {
+    color: #0070f3;
+    border-color: #0070f3;
+}
+
 @media (max-width: 811px) {
     .quiz_wrapper {
         width: 45rem;
@@ -65,6 +99,11 @@
 @media (max-width: 768px) {
     .quiz_wrapper {
         width: 90%;
+    }
+
+    .quiz_card_option {
+        padding: 0.9rem;
+        height: auto;
     }
 }
 
@@ -81,5 +120,9 @@
     .progress {
         max-width: 200px;
         margin: 0 auto;
+    }
+
+    .buttonTextSelector {
+        font-size: 16px;
     }
 }
