--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color:black;
+  background-color: #eef9fd;
 }
 
 a {
