--- a/styles/defaultTheme.css
+++ b/styles/defaultTheme.css
@@ -64,8 +64,13 @@
     margin: 0;
 }
 
+.quiz-card{
+    width: 100%;
+}
+
 .quiz_card_option,
 .campusCard {
+    position: relative;
     padding: 1rem;
     text-align: left;
     color: #0097CF;
