--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding-top: 5rem
+  /* padding-top: 5rem */
 }
 
 /* Probremas con varios tamaños de card */
@@ -33,6 +33,7 @@
   align-items: center;
   width: 100%;
   padding: 0 0.5rem;
+  margin-top: 6rem;
 }
 
 .footer {
