--- a/styles/defaultTheme.css
+++ b/styles/defaultTheme.css
@@ -1,6 +1,6 @@
 .quiz_wrapper {
     width: 50.5rem;
-    margin: 2rem 0 5rem 0;
+    margin: 2rem 0 0 0;
     padding: 2rem;
     border-radius: 0.5rem;
     display: flex;
